# H2S-GenAi

./: .env  .gitignore  Dockerfile  README.md  Summery.md  Untitled.ipynb  cloudbuil.yaml  cloudbuild.yaml  erudite-realm-472100-k9-5d79b1c4d9bb.json  erudite-realm-472100-k9-90c0c0db28e5.json  first.jsonl  main.py  output.txt  pyproject.toml  requirements.txt  test.py  worksheet.xlsx
.github/workflows/: deploy.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
backend/: api.py  bigQuery.py  main_graph.py  test.py
backend/agents/: compliance_checker.py  orchestrator.py  testcase_generator.py
backend/core/: data_models.py  workflow.py
backend/gcp-cloudfunctions/db_schema/db_schema/: create_schema.sql
backend/gcp-cloudfunctions/jira-bigquery-sync/: IMPLEMENTATION_GUIDE.md  README.md  bigquery_schemas.md  deploy.ps1  deploy.sh  jira_configuration.md
backend/gcp-cloudfunctions/jira-bigquery-sync/cloud_functions/bigquery_to_jira/: main.py
backend/gcp-cloudfunctions/jira-bigquery-sync/cloud_functions/jira_to_bigquery/: main.py  requirements.txt
backend/tools/: compliance_checker_tool.py  testcase_generator_tool.py
utils/: all_combined_first.py  fda_download.py  jasmeet-2.ipynb  jasmeet_rag_01.py.ipynb  ouptutViwer.txt  perplexity_answer.py  temp.py  tempV2.py
