[project]
name = "h2s-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "cachetools==5.5.2",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "docstring-parser==0.17.0",
    "fastapi==0.116.2",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-cloud-aiplatform==1.71.1",
    "google-cloud-bigquery==3.37.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.4",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.75.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.27.2",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jupyter>=1.1.1",
    "langchain==0.3.27",
    "langchain-core==0.3.76",
    "langchain-google-vertexai==2.0.9",
    "langchain-text-splitters==0.3.11",
    "langgraph==0.6.7",
    "langgraph-checkpoint==2.1.1",
    "langgraph-prebuilt==0.6.4",
    "langgraph-sdk==0.2.7",
    "langsmith==0.4.28",
    "numpy==2.3.3",
    "orjson==3.11.3",
    "ormsgpack==1.10.0",
    "packaging==25.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "shapely==2.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "starlette==0.48.0",
    "tenacity==9.1.2",
    "typing-extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "vertexai==1.71.1",
    "xxhash==3.5.0",
    "zstandard==0.25.0",
]
